# agentic-security-fleet-ops

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  entrygraph-116-review.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/asfops/: __init__.py  api.py  config.py  exceptions.py  logs.py  orchestrator.py  results.py
src/asfops/cli/: __init__.py  app.py  render.py
src/asfops/dashboard/: __init__.py  app.py  data.py  launch.py
src/asfops/fleet/: __init__.py  member.py  roles.py  roster.py  schemas.py
src/asfops/models/: __init__.py  bridge.py  client.py  copilot.py  resolve.py
tests/: conftest.py  test_api.py  test_bridge.py  test_cli.py  test_client.py  test_controls.py  test_copilot_model.py  test_dashboard.py  test_logs.py  test_orchestrator.py  test_render.py  test_results_usage.py  test_roster.py  test_schemas.py  test_version.py
tests/fakes/: copilot_fakes.py
